--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -18,13 +18,17 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    height: $line * 4;
+    height: $line * 10;
     padding: 0 20%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     background: {
-      color: black;
+      color: red;
+    }
+
+    #logo {
+      width: 20%;
     }
 
     #menu {
