--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,4 +1,14 @@
 @font-face {
   font-family: Ico;
-  src: url("../fonts/icomoon.ttf");
+  src: url("../fonts/ico.ttf");
+}
+
+@font-face {
+  font-family: Sans;
+  src: url("../fonts/OpenSansCondensedLightItalic.ttf");
+}
+
+@font-face {
+  font-family: OSans;
+  src: url("../fonts/OpenSansRegular.ttf");
 }
