--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -57,8 +57,8 @@ body {
           transform: uppercase;
         }
         font: {
-          family: Helvatica, sans-serif;
-          size: 0;
+          family: $fontOSans;
+          size: $line;
         }
         word-break: keep-all;
         word-wrap: normal;
@@ -85,12 +85,17 @@ body {
       .content-block {
         display: flex;
         align-items: center;
+        flex-grow: 1;
         padding: 0 15%;
         background: {
           image: url("../images/bg.png");
           position: center;
           size: auto 100%;
           repeat: no-repeat;
+        }
+        transition: {
+          duration: $time;
+          timing-function: linear;
         }
 
         #tagline {
@@ -99,7 +104,7 @@ body {
           padding: 0;
           margin: 0;
           font: {
-            family: Helvatica, sans-serif;
+            family: $fontOSans;
             size: $line * 4;
             weight: normal;
           }
@@ -147,7 +152,7 @@ body {
           .name {
             font: {
               size: $line * 4;
-              family: Open Sans, sans-serif;
+              family: $fontOSans;
             }
             color: white;
           }
@@ -164,26 +169,35 @@ body {
         .content {
           display: flex;
           align-items: center;
+          border: 1px solid red;
 
           .big-letter {
-            padding: 0 0 $line * 4 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
             position: relative;
             text-align: left;
-            color: $main;
-            text: {
-              transform: uppercase;
-            }
-            font: {
-              family: 'Open Sans', sans-serif;
-              size: $line * 35;
+            margin: 0 $line * 2 0 0;
+
+            .letter {
+              display: block;
+              flex-shrink: 1;
+              padding: 0;
+              margin: 0 0 $line * -7 0;
+              font: {
+                family: $fontOSans;
+                size: $line * 40;
+              }
+              color: $main;
+              text: {
+                transform: uppercase;
+              }
             }
 
             .line {
-              position: absolute;
-              bottom: 0;
-              left: 45%;
+              flex-grow: 1;
               width: $line / 2;
-              height: $line * 10;
+              height: $line * 15;
               background: {
                 color: $main;
               }
@@ -207,41 +221,41 @@ body {
               color: white;
               width: 50%;
               font: {
-                family: Open Sans, sans-serif;
+                family: $fontOSans;
                 size: $line * 2;
               }
               line-height: $line * 2.5;
             }
           }
         }
+      }
 
-        #visualization {
-          border: 1px solid red;
-          width: 70%;
-          display: flex;
-          justify-content: space-between;
-          align-items: center;
+      #visualization {
+        border: 1px solid red;
+        width: 70%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
 
-          figure {
+        figure {
 
-            figcaption {
-              color: white;
-              font: {
-                family: Helvatica, sans-serif;
-                size: $line * 4;
-                weight: normal;
-              }
+          figcaption {
+            color: white;
+            font: {
+              family: $fontOSans;
+              size: $line * 4;
+              weight: normal;
             }
+          }
 
-            .line {
-              background: {
-                color: white;
-              }
-            }
-
-            .ico {
+          .line {
+            background: {
               color: white;
             }
+          }
+
+          .ico {
+            color: white;
           }
         }
       }
