--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -9,6 +9,11 @@
 }
 
 @font-face {
-  font-family: OSans;
+  font-family: OpenSans;
   src: url("../fonts/OpenSansRegular.ttf");
+}
+
+@font-face {
+  font-family: SansCond;
+  src: url("../fonts/OpenSans-CondLight.ttf");
 }
