--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,5 +3,5 @@ $time: 200ms;
 $main: #3300ff;
 $dark: #110055;
 $light: #bbaaff;
-$fontSans: Sans, 'Helvetica', sans-serif;
-$fontOSans: OSans, Sans, 'Helvtica', sans-serif;
+$fontSansCond: SansCond, 'Helvetica', sans-serif;
+$fontOpenSans: OpenSans, 'Helvteica', sans-serif;
