--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -58,3 +58,10 @@
 @mixin textBlock($color) {
   color: $color;
 }
+
+@mixin noScroll() {
+  &::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+  }
+}
