--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -18,6 +18,30 @@ body {
     attachment: fixed;
     repeat: no-repeat;
   }
+  overflow: {
+    x: hidden;
+    y: scroll;
+  }
+  @include noScroll();
+
+  video {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    transform: translateX(-50%) translateY(-50%);
+    background: {
+      size: cover;
+    }
+    transition: {
+      duration: $time * 5;
+      timing-function: linear;
+    }
+  }
 
   header {
     position: fixed;
@@ -332,8 +356,19 @@ body {
 
         img {
           flex-basis: 20%;
-          width: 20%;
+          width: 30%;
           margin: 10% 0;
+          filter: grayscale(100%);
+
+          transition: {
+            duration: $time;
+            timing-function: linear;
+          }
+
+          &:hover {
+            filter: none;
+            transform: scale(1.1);
+          }
         }
       }
     }
