--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -17,3 +17,8 @@
   font-family: SansCond;
   src: url("../fonts/OpenSans-CondLight.ttf");
 }
+
+@font-face {
+  font-family: IcoV2;
+  src: url("../fonts/icoV2.ttf");
+}
