--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -82,6 +82,7 @@ body {
         font: {
           family: $fontSansCond;
           size: $line;
+          weight: bold;
         }
         word-break: keep-all;
         word-wrap: normal;
