--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3,6 +3,12 @@
 @import "fonts";
 @import "keyframes";
 
+html {
+  font: {
+    size: $line * 2;
+  }
+}
+
 html,
 body {
   padding: 0;
@@ -62,7 +68,7 @@ body {
 
     #logo {
       display: block;
-      padding: 0;
+      padding: $line / 5;
       width: 20%;
       align-self: center;
     }
@@ -81,7 +87,7 @@ body {
         }
         font: {
           family: $fontSansCond;
-          size: $line;
+          size: 1.1em;
           weight: bold;
         }
         word-break: keep-all;
@@ -129,7 +135,7 @@ body {
           margin: 0;
           font: {
             family: $fontOpenSans;
-            size: $line * 4;
+            size: 2.6em;
             weight: normal;
           }
 
@@ -208,7 +214,7 @@ body {
               width: 70%;
               font: {
                 family: $fontSansCond;
-                size: $line * 1.8;
+                size: 1.1em;
               }
             }
           }
@@ -236,15 +242,15 @@ body {
             color: white;
             font: {
               family: $fontSansCond;
-              size: $line * 2.6;
-              weight: normal;
+              size: 1.5em;
+              weight: bold;
             }
             letter-spacing: 1.5px;
           }
 
           .line {
             margin: $line 0;
-            width: 2px;
+            width: 3px;
             height: $line * 7.5;
             background: {
               color: white;
@@ -257,13 +263,13 @@ body {
             align-items: center;
             font: {
               family: IcoV2;
-              size: $line * 5;
+              size: 3em;
             }
             width: $line * 10;
             height: $line * 10;
             border: {
               style: solid;
-              width: 1px;
+              width: 3px;
               color: white;
               radius: 50%;
             }
@@ -307,7 +313,7 @@ body {
         #about-visual {
           height: 200px;
           width: 200px;
-          align-self: flex-end;
+          align-self: center;
           margin-bottom: 7%;
           border: {
             radius: 50%;
@@ -326,7 +332,7 @@ body {
             width: 80%;
             font: {
               family: $fontSansCond;
-              size: $line * 1.8;
+              size: 1.1em;
             }
           }
         }
@@ -419,7 +425,7 @@ body {
           color: white;
           font: {
             family: $fontSansCond;
-            size: $line * 2.7;
+            size: 1.7em;
           }
 
           input,
@@ -429,6 +435,7 @@ body {
               duration: $time;
               timing-function: linear;
             }
+            cursor: pointer;
 
             &:focus {
               box-shadow: inset 0 0 0 3px $main;
@@ -471,17 +478,28 @@ body {
         }
 
         #contacts-list {
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+          align-items: flex-start;
+          width: 25%;
           color: white;
           align-self: center;
           font: {
             family: $fontSansCond;
-            size: $line * 2.5;
+            size: 1.4em;
             weight: bold;
           }
           list-style: none;
 
           .contacts-item {
-            margin: $line * 2 0;
+            width: 100%;
+            display: flex;
+            justify-content: flex-start;
+            flex-wrap: nowrap;
+            align-items: center;
+            margin: $line 0;
+            padding: $line / 2;
             transition: {
               duration: $time;
               timing-function: linear;
@@ -489,12 +507,13 @@ body {
             cursor: pointer;
 
             .ico {
-              padding: 0 $line * 2 0 0;
+              margin: 0 5% 0 0;
+              padding: $line / 2;
               color: white;
               font: {
                 family: IcoV2;
                 weight: 100;
-                size: $line * 3.5;
+                size: 1.3em;
               }
               transition: {
                 duration: $time;
@@ -507,6 +526,15 @@ body {
 
               .ico {
                 color: $main;
+              }
+            }
+          }
+
+          #mail {
+            .ico {
+              padding: 0;
+              font: {
+                size: 1.6em;
               }
             }
           }
